--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.31.11",
     "prettier": "2.8.1",
+    "sass": "^1.57.1",
     "typescript": "*",
     "vite": "^4.0.0"
   }
